data/derived/sp14/progs/unify/prog3401.ml.out
Characters 113-130:
  let seen' = if !(List.mem h seen) then (h :: seen) in
                  ^^^^^^^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a ref
